--- a/index3.html
+++ b/index3.html
@@ -5,6 +5,13 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/main3.css" type="text/css" />
         <script src="scripts/d3.v3.js"></script>
+        <noscript>
+            <div align="center">
+                <p style="color:black;background-color:red;font-size:18pt">
+                    This website requires JavaScript.  Please turn on JavaScript and then <a href="">try it again</a>.
+                </p>
+            </div>
+        </noscript>
     </head>
     <body>
         <script src="scripts/main3.js"></script>
