--- a/index.html
+++ b/index.html
@@ -3,30 +3,33 @@
     <head>
         <title>index.html</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/main.css" type="text/css" />
-
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-        <script src="http://code.jquery.com/jquery-1.10.1.js"></script>
-        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-
-        <script type="text/javascript">
-            JSCLASS_PATH = 'scripts/jsclass'
-        </script>
-        <script type="text/javascript" src="scripts/jsclass/loader-browser.js"></script>
-
-        <script src="scripts/d3.v3.js"></script>
-        <script src="scripts/graphview.js"></script>
-        <script src="scripts/circleview.js"></script>
-        <script src="scripts/require.js"></script>
-        <script src="scripts/main.js"></script>
     </head>
     <body>
-
-        <div id="title"></div>
-        <div id="tooltip"></div>
-        <div id="drawingElement"></div>
-        <div id="circleDiv"></div>
-        <div id="input" class="ui-widget-content"></div>
-
+        <dl>
+            <dt>
+                <a href='test.html' target='_test'>test.html</a>
+            </dt>
+            <dd>
+                Draw multi-ring, sorted CircleMaps on the client using D3 arc.
+            </dd>
+            <dt>
+                <a href='test2.html' target='_test'>test2.html</a>
+            </dt>
+            <dd>
+                Simple interactive graph with D3 force layout.
+            </dd>
+            <dt>
+                <a href='test3.html' target='_test'>test3.html</a>
+            </dt>
+            <dd>
+                Adding and removing random nodes from simple graph.
+            </dd>
+            <dt>
+                <a href='test4.html' target='_test'>test4.html</a>
+            </dt>
+            <dd>
+                Adding randomly linked node to simple graph.
+            </dd>
+        </dl>
     </body>
 </html>
