test5 for trying to bind different shapes to d3 force layout.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             <dd>
                 Adding randomly linked node to simple graph.
             </dd>
+            <dt>
+                <a href='test5.html' target='_test'>test5.html</a>
+            </dt>
+            <dd>
+                ()
+            </dd>
         </dl>
     </body>
 </html>
