Update index.html file with description of test5.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href='test5.html' target='_test'>test5.html</a>
             </dt>
             <dd>
-                ()
+                Adding and deleteing nodes/edges correctly from simple graph.  Was previously assigning class "node" or "link" to the wrong element.  Correct way is to assign the class to the outermost element of the node or link.
             </dd>
         </dl>
     </body>
