Skeleton for test6, which will be to use biological pathway file to draw graph.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
             <dd>
                 Adding and deleteing nodes/edges correctly from simple graph.  Was previously assigning class "node" or "link" to the wrong element.  Correct way is to assign the class to the outermost element of the node or link.
             </dd>
+            <dt>
+                <a href='test6.html' target='_test'>test6.html</a>
+            </dt>
+            <dd>
+                (Use data from a pathway file to draw graph.)
+            </dd>
         </dl>
     </body>
 </html>
