New javascript object for storing graph data.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href='test6.html' target='_test'>test6.html</a>
             </dt>
             <dd>
-                (Use data from a pathway file to draw graph.)
+                Use data from a pathway file to draw graph.  Graph data is stored in in a graphData object.
             </dd>
         </dl>
     </body>
