--- a/test6.html
+++ b/test6.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/main6.css" type="text/css" />
         <script src="scripts/d3.v3.js"></script>
-        <script src="scripts/graph.js"></script>
+        <script src="scripts/graphData.js"></script>
         <noscript>
             <div align="center">
                 <p style="color:black;background-color:red;font-size:18pt">
