Read graph data from SIF format.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
                 <a href='test6.html' target='_test'>test6.html</a>
             </dt>
             <dd>
-                Use data from a pathway file to draw graph.  Graph data is stored in in a graphData object.
+                Use data from a pathway file (PID) to draw graph.  Graph data is stored in in a graphData object.
+            </dd>
+            <dt>
+                <a href='test7.html' target='_test'>test7.html</a>
+            </dt>
+            <dd>
+                Use data from a pathway file (SIF) to draw graph.
             </dd>
         </dl>
     </body>
