Test 8 will be to assign different shape to each node type (group).

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
             <dd>
                 Use data from a pathway file (SIF) to draw graph.
             </dd>
+            <dt>
+                <a href='test8.html' target='_test'>test8.html</a>
+            </dt>
+            <dd>
+                (Use different node shape depending on some node attribute.)
+            </dd>
         </dl>
     </body>
 </html>
