Small molecules are squares.  All other nodes are circle.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href='test8.html' target='_test'>test8.html</a>
             </dt>
             <dd>
-                (Use different node shape depending on some node attribute.)
+                Use different node shape depending on some node attribute.
             </dd>
         </dl>
     </body>
