test1b is for attempting to draw CircleMaps with D3 and no jQuery.
test9 is for attempting to use CircleMaps for nodes.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
                 Draw multi-ring, sorted CircleMaps on the client using D3 arc.
             </dd>
             <dt>
+                <a href='test1b.html' target='_test'>test1b.html</a>
+            </dt>
+            <dd>
+                (CircleMaps without jQuery.)
+            </dd>
+            <dt>
                 <a href='test2.html' target='_test'>test2.html</a>
             </dt>
             <dd>
@@ -53,6 +59,12 @@
             </dt>
             <dd>
                 Use different node shape depending on some node attribute.
+            </dd>
+            <dt>
+                <a href='test9.html' target='_test'>test9.html</a>
+            </dt>
+            <dd>
+                (Use CircleMap images for nodes.)
             </dd>
         </dl>
     </body>
