--- a/test1b.html
+++ b/test1b.html
@@ -5,21 +5,18 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/main.css" type="text/css" />
 
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-        <script src="http://code.jquery.com/jquery-1.10.1.js"></script>
-        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-
         <script src="scripts/d3.v3.js"></script>
         <script src="scripts/circleview2.js"></script>
-        <script src="scripts/main1b.js"></script>
+
+        <noscript>
+            <div align="center">
+                <p style="color:black;background-color:red;font-size:18pt">
+                    This website requires JavaScript.  Please turn on JavaScript and then <a href="">try it again</a>.
+                </p>
+            </div>
+        </noscript>
     </head>
     <body>
-
-        <div id="title"></div>
-        <div id="tooltip"></div>
-        <div id="drawingElement"></div>
-        <div id="circleDiv"></div>
-        <div id="input" class="ui-widget-content"></div>
-
+        <script src="scripts/main1b.js"></script>
     </body>
 </html>
