circleMapGenerator is a new object for generating circleMap images as SVG g elements.  jQuery is no longer used.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href='test1b.html' target='_test'>test1b.html</a>
             </dt>
             <dd>
-                (CircleMaps without jQuery.)
+                CircleMaps without jQuery.
             </dd>
             <dt>
                 <a href='test2.html' target='_test'>test2.html</a>
