--- a/test1b.html
+++ b/test1b.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/main.css" type="text/css" />
 
         <script src="scripts/d3.v3.js"></script>
-        <script src="scripts/circleview2.js"></script>
+        <script src="scripts/circleMapGenerator.js"></script>
 
         <noscript>
             <div align="center">
