--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                 CircleMaps without jQuery.
             </dd>
             <dt>
+                <a href='test1c.html' target='_test'>test1c.html</a>
+            </dt>
+            <dd>
+                (load CircleMap data and network data in the same webpage.)
+            </dd>
+            <dt>
                 <a href='test2.html' target='_test'>test2.html</a>
             </dt>
             <dd>
