--- a/test1b.html
+++ b/test1b.html
@@ -3,7 +3,7 @@
     <head>
         <title>test1b.html</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/main.css" type="text/css" />
+        <link rel="stylesheet" href="css/main1b.css" type="text/css" />
 
         <script src="scripts/d3.v3.js"></script>
         <script src="scripts/circleMapGenerator.js"></script>
