--- a/test1c.html
+++ b/test1c.html
@@ -7,6 +7,7 @@
 
         <script src="scripts/d3.v3.js"></script>
         <script src="scripts/circleMapGenerator.js"></script>
+        <script src="scripts/graphData.js"></script>
 
         <noscript>
             <div align="center">
