test1c draws circleMaps and pathway graph separately, but on the same SVG canvas.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href='test1c.html' target='_test'>test1c.html</a>
             </dt>
             <dd>
-                (load CircleMap data and network data in the same webpage.)
+                Load CircleMap data and network data in the same webpage.
             </dd>
             <dt>
                 <a href='test2.html' target='_test'>test2.html</a>
