test1c copied to test9 to be modified.

--- a/test9.html
+++ b/test9.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/main9.css" type="text/css" />
         <script src="scripts/d3.v3.js"></script>
+        <script src="scripts/circleMapGenerator.js"></script>
         <script src="scripts/graphData.js"></script>
         <noscript>
             <div align="center">
