circleMaps as nodes is working.  However, the buttons to add and delete nodes is now broken.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <a href='test9.html' target='_test'>test9.html</a>
             </dt>
             <dd>
-                (Use CircleMap images for nodes.)
+                Use CircleMap images for nodes.
             </dd>
         </dl>
     </body>
