--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
             <dd>
                 Use CircleMap images for nodes.
             </dd>
+            <dt>
+                <a href='test10.html' target='_test'>test10.html</a>
+            </dt>
+            <dd>
+                (Fix adding and deleting of nodes.)
+            </dd>
         </dl>
     </body>
 </html>
