--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <a href='test10.html' target='_test'>test10.html</a>
             </dt>
             <dd>
-                (Fix adding and deleting of nodes.)
+                Fix adding and deleting of nodes when using CircleMap nodes.
             </dd>
         </dl>
     </body>
