update with latest change

--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@
                 <a href='test10.html' target='_test'>test10.html</a>
             </dt>
             <dd>
-                Fix adding and deleting of nodes when using CircleMap nodes.
+                <ul>
+                    <li>
+                        Fix adding and deleting of nodes when using CircleMap nodes.
+                    </li>
+                    <li>
+                        Mouseover/mouseout changes size of circlemap nodes.
+                    </li>
+                </ul>
             </dd>
         </dl>
     </body>
