added jquery back in

--- a/test10.html
+++ b/test10.html
@@ -4,6 +4,11 @@
         <title>test10.html</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/main10.css" type="text/css" />
+
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+        <script src="http://code.jquery.com/jquery-1.10.1.js"></script>
+        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+
         <script src="scripts/d3.v3.js"></script>
         <script src="scripts/circleMapGenerator.js"></script>
         <script src="scripts/graphData.js"></script>
