New controls for removing a selected node from the graph.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                     <li>
                         Mouseover/mouseout changes size of circlemap nodes.
                     </li>
+                    <li>
+                        Add control to delete a displayed node and its edges.
+                    </li>
                 </ul>
             </dd>
         </dl>
