Added control to add new node, but some problems came up: 1- strange behavior when adding node with same name multiple times 2- re-adding a previously existing node that also has an edge, the link is not re-added automatically

--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
                     </li>
                 </ul>
             </dd>
+            <dt>
+                <a href='test11.html' target='_test'>test11.html</a>
+            </dt>
+            <dd>
+                <ul>
+                    <li>
+                        Added control to add a node, but there is some strange behavior when adding node with same name multiple times.  Also, when re-adding a previously existing node that also has an edge, the link is not re-added automatically.
+                    </li>
+                </ul>
+            </dd>
         </dl>
     </body>
 </html>
