--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <dd>
                 <ul>
                     <li>
-                        Added control to add a node, but there is some strange behavior when adding node with same name multiple times.  Also, when re-adding a previously existing node that also has an edge, the link is not re-added automatically.
+                        Added control to add a node, <del>but there is some strange behavior when adding node with same name multiple times.</del> Also, when re-adding a previously existing node that also has an edge, the link is not re-added automatically.
                     </li>
                 </ul>
             </dd>
