--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                     <li>
                         Added control to add a node, <del>but there is some strange behavior when adding node with same name multiple times.</del> Also, when re-adding a previously existing node that also has an edge, the link is not re-added automatically.
                     </li>
+                    <li>
+                        Added button to view current graph as PID in alert window.
+                    </li>
                 </ul>
             </dd>
         </dl>
