--- a/index.html
+++ b/index.html
@@ -99,6 +99,26 @@
                     <li>
                         Added button to view current graph as PID in alert window.
                     </li>
+                    <li>
+                        Added some SBGN shapes
+                        <ul>
+                            <li>
+                                circle (simple chemical)
+                            </li>
+                            <li>
+                                ellipse (unspecified entity)
+                            </li>
+                            <li>
+                                rectangle with bottom rounded corners (nucleic acid feature)
+                            </li>
+                            <li>
+                                rectangle with all rounded corners (perturbing agent)
+                            </li>
+                            <li>
+                                large rectangle with angled corners (complex)
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </dd>
         </dl>
