--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
                     </li>
                 </ul>
             </dd>
+            <dt>
+                <a href='test12.html' target='_test'>test12.html</a>
+            </dt>
+            <dd>
+                <li>
+                    Reduced opacity for SBGN nodes.
+                </li>
+                <li>
+                    (Button to toggle between to circleMap &amp; SBGN viz.)
+                </li>
+            </dd>
         </dl>
     </body>
 </html>
