--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     Reduced opacity for SBGN nodes.
                 </li>
                 <li>
-                    (Button to toggle between to circleMap &amp; SBGN viz.)
+                    Link color determined by relation.
                 </li>
             </dd>
         </dl>
