control for deleting edge

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </ul>
             </dd>
             <dt>
-                <a href='test12.html' target='_test'>test12.html</a>
+                <a href='test12.html?test=true&circles=false' target='_test'>test12.html?test=true&circles=false</a>
             </dt>
             <dd>
                 <li>
@@ -130,6 +130,15 @@
                 </li>
                 <li>
                     Link color determined by relation.
+                </li>
+                <li>
+                    (possible bug with writing PID file where the entity has identical name, but different entity type)
+                </li>
+                <li>
+                    Updated force layout parameters to make a better graph for viewing.  Reducing the gravity value helps prevent the graph from collapsing in on itself.
+                </li>
+                <li>
+                    Control for deleting edge.
                 </li>
             </dd>
         </dl>
