test button to try jqueryui dialogbox

--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                 <li>
                     Control for deleting edge.
                 </li>
+                <li>
+                    test button for trying out jqueryUI dialog box.
+                </li>
             </dd>
         </dl>
     </body>
