--- a/test12.html
+++ b/test12.html
@@ -22,5 +22,10 @@
     </head>
     <body>
         <script src="scripts/main12.js"></script>
+        <div id="dialog" title="Basic dialog" style='display:none'>
+            <p>
+                This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.
+            </p>
+        </div>
     </body>
 </html>
