capture right click mouse events

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
                 <li>
                     test button for trying out jqueryUI dialog box.
                 </li>
+                <li>
+                    capture right click mouse events on main svg area, nodes, and links.
+                </li>
             </dd>
         </dl>
     </body>
