copy test12 to test13

--- a/index.html
+++ b/index.html
@@ -146,6 +146,17 @@
                 <li>
                     capture right click mouse events on main svg area, nodes, and links.
                 </li>
+                <li>
+                    Lots of code refactoring.
+                </li>
+            </dd>
+            <dt>
+                <a href='test13.html?test=true&circles=false' target='_test'>test13.html?test=true&circles=false</a>
+            </dt>
+            <dd>
+                <li>
+                    ...
+                </li>
             </dd>
         </dl>
     </body>
