testing context menus

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </dt>
             <dd>
                 <li>
-                    ...
+                    Testing context menus.
                 </li>
             </dd>
         </dl>
