--- a/test13.html
+++ b/test13.html
@@ -9,6 +9,9 @@
         <script src="http://code.jquery.com/jquery-1.10.1.js"></script>
         <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
+        <script src="scripts/jquery.contextmenu.js"></script>
+        <link rel="stylesheet" href="css/jquery.contextmenu.css">
+
         <script src="scripts/d3.v3.js"></script>
         <script src="scripts/circleMapGenerator.js"></script>
         <script src="scripts/graphData.js"></script>
