got dialog box that knows about the graph element that triggered it

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
+        <a name='top'></a><small><a href='#bottom'>go to bottom</a></small>
         <dl>
             <dt>
                 <a href='test.html' target='_test'>test.html</a>
@@ -159,5 +160,7 @@
                 </li>
             </dd>
         </dl>
+
+        <a name='bottom'></a><small><a href='#top'>go to top</a></small>
     </body>
 </html>
