new page for adding controls to dialog box

--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
                     Testing context menus.
                 </li>
             </dd>
+            <dt>
+                <a href='test14.html?test=true&circles=false' target='_test'>test14.html?test=true&circles=false</a>
+            </dt>
+            <dd>
+                <li>
+                    (add some controls to the node dialog and edge dialog)
+                </li>
+            </dd>
         </dl>
 
         <a name='bottom'></a><small><a href='#top'>go to top</a></small>
