--- a/index.html
+++ b/index.html
@@ -164,7 +164,21 @@
             </dt>
             <dd>
                 <li>
-                    (add some controls to the node dialog and edge dialog)
+                    Some controls moved into dialog boxes triggered by context menus:
+                    <ul>
+                        <li>
+                            delete edge
+                        </li>
+                        <li>
+                            delete node
+                        </li>
+                        <li>
+                            new node
+                        </li>
+                        <li>
+                            export to UCSC pathway file
+                        </li>
+                    </ul>
                 </li>
             </dd>
         </dl>
