test15 for working on adding new edge

--- a/index.html
+++ b/index.html
@@ -178,8 +178,17 @@
                         <li>
                             export to UCSC pathway file
                         </li>
+                        <li>
+                            place holder controls for adding new edge
+                        </li>
                     </ul>
                 </li>
+            </dd>
+            <dt>
+                <a href='test15.html?test=true&circles=false' target='_test'>test15.html?test=true&circles=false</a>
+            </dt>
+            <dd>
+                (work on adding new edge)
             </dd>
         </dl>
 
