node clicks append list of clicked nodes

--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
             <dd>
                 (work on adding new edge)
             </dd>
+            <dd>
+                Set stroke:black for SBGN nodes.
+            </dd>
+            <dd>
+                Node clicks append a non-redundant list of clicked-node indices.
+            </dd>
         </dl>
 
         <a name='bottom'></a><small><a href='#top'>go to top</a></small>
