incomplete - show current pathway file in a dialog box

--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
             <dd>
                 Node clicks append a non-redundant list of clicked-node indices.
             </dd>
+            <dd>
+                incomplete - show current pathway in a dialog box.
+            </dd>
         </dl>
 
         <a name='bottom'></a><small><a href='#top'>go to top</a></small>
