edge thicken on mouseover & add some other sample pathways

--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
             <dd>
                 incomplete - show current pathway in a dialog box.
             </dd>
+            <dd>
+                Edge thicken on mouseover.
+            </dd>
+            <dd>
+                Change gravity from 0.01 to 0.005.
+            </dd>
         </dl>
 
         <a name='bottom'></a><small><a href='#top'>go to top</a></small>
