node border thickens on mouseover

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 Edge thicken on mouseover.
             </dd>
             <dd>
-                Change gravity from 0.01 to 0.005.
+                Node border thicken on mouseover.
             </dd>
         </dl>
 
