sizing improvement to pathway textarea

--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@
             <dd>
                 Node border thicken on mouseover.
             </dd>
+            <dd>
+                Sizing improvement to pathway export textarea.
+            </dd>
         </dl>
 
         <a name='bottom'></a><small><a href='#top'>go to top</a></small>
