update to latest rb1 pathway

--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
             <dd>
                 Sizing improvement to pathway export textarea.
             </dd>
+            <dd>
+                (need to escape space characters in node names that are used as element class names.)
+            </dd>
         </dl>
 
         <a name='bottom'></a><small><a href='#top'>go to top</a></small>
