new version, test16

--- a/index.html
+++ b/index.html
@@ -188,9 +188,6 @@
                 <a href='test15.html?test=true&circles=false' target='_test'>test15.html?test=true&circles=false</a>
             </dt>
             <dd>
-                (work on adding new edge)
-            </dd>
-            <dd>
                 Set stroke:black for SBGN nodes.
             </dd>
             <dd>
@@ -210,6 +207,21 @@
             </dd>
             <dd>
                 (need to escape space characters in node names that are used as element class names.)
+            </dd>
+            <dd>
+                adding new edge mostly works
+            </dd>
+            <dt>
+                <a href='test16.html?test=true&circles=false' target='_test'>test16.html?test=true&circles=false</a>
+            </dt>
+            <dd>
+                (from last version: need to escape space characters in node names that are used as element class names.)
+            </dd>
+            <dd>
+                (workflow for adding complex with components)
+            </dd>
+            <dd>
+                (workflow for adding family with members)
             </dd>
         </dl>
 
