--- a/test17.html
+++ b/test17.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="css/jquery.contextmenu.css">
 
 		<script src="scripts/d3.v3.js"></script>
+		<script src="scripts/static.js"></script>
 		<script src="scripts/circleMapGenerator.js"></script>
 		<script src="scripts/graphData.js"></script>
 		<noscript>
